--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "8.4.30",
     "prisma": "^5.3.1",
     "react": "18.2.0",
+    "react-autosave": "^0.4.2",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
