--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^4.35.3",
+    "@tanstack/react-query-devtools": "^4.35.3",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
