--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "langchain": "^0.0.153",
     "lucide-react": "^0.279.0",
     "next": "13.5.2",
     "postcss": "8.4.30",
