--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@vitejs/plugin-react-swc": "^3.4.0",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "jsdom": "^22.1.0",
     "langchain": "^0.0.153",
     "lucide-react": "^0.279.0",
     "next": "13.5.2",
@@ -40,6 +44,7 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
+    "vitest": "^0.34.5",
     "zod": "^3.22.2"
   }
 }
